--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div id="home_img">
                 <div id="img_box">
                     <div id="img">
-                        <img src="/photo/IMG_2248-removebg-preview (1).png" alt="photo">
+                        <img src="photo/IMG_2248-removebg-preview (1).png" alt="photo">
                     </div>
                 </div>
             </div>
@@ -376,27 +376,27 @@
                 <div class="portfolio-carousel">
                     <div class="img-slide">
                         <div class="img-item">
-                            <img src="/images/portfolio6.jpg" alt="">
+                            <img src="images/portfolio6.jpg" alt="">
                         </div>
 
                         <div class="img-item">
-                            <img src="/images/portfolio5.jpg" alt="">
+                            <img src="images/portfolio5.jpg" alt="">
                         </div>
 
                         <div class="img-item">
-                            <img src="/images/portfolio1.jpg" alt="">
+                            <img src="images/portfolio1.jpg" alt="">
                         </div>
 
                         <div class="img-item">
-                            <img src="/images/portfolio2.jpg" alt="">
+                            <img src="images/portfolio2.jpg" alt="">
                         </div>
 
                         <div class="img-item">
-                            <img src="/images/portfolio3.jpg" alt="">
+                            <img src="images/portfolio3.jpg" alt="">
                         </div>
 
                         <div class="img-item">
-                            <img src="/images/portfolio4.jpg" alt="">
+                            <img src="images/portfolio4.jpg" alt="">
                         </div>
 
                     </div>
@@ -474,4 +474,5 @@
 </body>
 
 </html>
+
 
