--- a/index.html
+++ b/index.html
@@ -470,9 +470,10 @@
 </div>
 <!-- main page end -->
 
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
+
 
 
